k8s/networking/unbound/unbound-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unbound
  namespace: networking
  labels:
    app: unbound
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: unbound
  template:
    metadata:
      labels:
        app: unbound
    spec:
      containers:
      - name: unbound
        image: klutchell/unbound:v1.24.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 53
          name: dns-tcp
          protocol: TCP
        - containerPort: 53
          name: dns-udp
          protocol: UDP
        # Mount Unbound configuration
        volumeMounts:
        - name: unbound-config
          mountPath: /etc/unbound/unbound.conf.d
          subpath: homelab.unbound.conf
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "200m"
      volumes:
      - name: unbound-config
        configMap:
          name: unbound-config
      restartPolicy: Always
