k8s/networking/unbound/unbound-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unbound
  namespace: networking
  labels:
    app: unbound
spec:
  type: ClusterIP
  ports:
  - port: 53
    targetPort: 53
    protocol: TCP
    name: dns-tcp
  - port: 53
    targetPort: 53
    protocol: UDP
    name: dns-udp
  selector:
    app: unbound
